--- a/src/main/resources/templates/themes/default/footer.html
+++ b/src/main/resources/templates/themes/default/footer.html
@@ -40,8 +40,7 @@
                                  th:alt="${commons.site_title()}"/>
                         </a>
                         <br/>
-                        <p>&copy; 版权所有 <a href="https://github.com/ZHENFENG13/My-Blog" target="_blank"
-                                          rel="nofollow">My Blog</a> 保留一切权利
+                        <p>&copy; 版权所有  林忠青个人博客   联系方式：conkeyn@163.com
                         </p>
                         <br/>
                         <th:block th:if="${option}!=null and ${option.getValue()}!=''">
