--- a/src/main/resources/templates/themes/default/header.html
+++ b/src/main/resources/templates/themes/default/header.html
@@ -11,7 +11,7 @@
     <meta name="description" th:content="${description ?:commons.site_option('site_description')}"/>
     <link rel="shortcut icon" th:href="@{/user/img/favicon.png}"/>
     <link rel="apple-touch-icon" th:href="@{/user/img/apple-touch-icon.png}"/>
-    <title><th:block th:text="${title ?: '首页'}+' - '+${commons.site_option('site_title','My Blog')}"></th:block></title>
+    <title><th:block th:text="${title ?: '首页'}+' - '+${commons.site_option('site_title','林忠青的博客')}"></th:block></title>
     <link th:href="@{//cdn.bootcss.com/highlight.js/9.9.0/styles/xcode.min.css}" rel="stylesheet"/>
     <link th:href="@{/user/css/style.min.css}" rel="stylesheet"/>
     <script th:src="@{//cdn.bootcss.com/jquery/2.2.3/jquery.min.js}"></script>
@@ -34,8 +34,8 @@
         </a>
         <div class="navbar-menu">
             <a th:href="${commons.site_url('/archives')}">归档</a>
-            <a th:href="${commons.site_url('/links')}">友链</a>
-            <a th:href="${commons.site_url('/about')}">关于</a>
+            <!-- <a th:href="${commons.site_url('/links')}">友链</a>
+            <a th:href="${commons.site_url('/about')}">关于</a> -->
         </div>
         <div class="navbar-search" onclick="">
             <span class="icon-search"></span>
@@ -50,8 +50,8 @@
             <span class="icon-menu cross"><span class="middle"></span></span>
             <ul>
                 <li><a th:href="${commons.site_url('/archives')}">归档</a></li>
-                <li><a th:href="${commons.site_url('/links')}">友链</a></li>
-                <li><a th:href="${commons.site_url('/about')}">关于</a></li>
+                <!-- <li><a th:href="${commons.site_url('/links')}">友链</a></li>
+                <li><a th:href="${commons.site_url('/about')}">关于</a></li> -->
             </ul>
         </div>
     </div>
